# API-Reservas_local

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  tablas_provider.md
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 20260209_0001_initial_schema.py  20260213_0002_rental_addons.py
docs/: Orquestador.md  openapi.json  performance-report-2026-02-10.md  performance-testing.md  proceso_de_reserva.md  resumen-prueba-estres-2026-02-10.md  resumen-trabajo-2026-02-09.md  resumen-trabajo-2026-02-10.md  stress-report-2026-02-10.md  stress-testing.md
scripts/: export_openapi.py  run_outbox_worker.py  run_performance_tests.ps1  run_stress_tests.ps1  seed_dev_data.py  seed_dev_data.sql  summarize_performance_results.py  summarize_stress_results.py  validate_stress_integrity.py
src/reservas_api/: main.py
src/reservas_api/api/: app.py
tests/: conftest.py
tests/e2e/: test_reservations_e2e.py
tests/integration/: test_health.py  test_mysql_reservation_repository.py  test_outbox_components.py  test_reservations_api.py
tests/performance/: locust_stressfile.py  locustfile.py
tests/property/: test_audit_logger_properties.py  test_circuit_breaker_properties.py  test_create_reservation_external_dispatch_properties.py  test_create_reservation_use_case_properties.py  test_generate_reservation_code_concurrency_properties.py  test_generate_reservation_code_retry_properties.py  test_history_tracker_properties.py  test_input_sanitization_properties.py  test_outbox_delivery_properties.py  (+5 more)
(+64 files in other folders)
