[project]
name = "reservas-api"
version = "0.1.0"
description = "API de reservas con arquitectura hexagonal"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.1",
    "email-validator>=2.2.0",
    "sqlmodel>=0.0.24",
    "aiomysql>=0.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.10",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "alembic>=1.16.5",
    "pymysql>=1.1.1",
    "hypothesis>=6.136.2",
    "httpx>=0.28.1",
    "locust>=2.40.4",
]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reservas_api"]
